--- a/src/main/res/layout/activity_batch.xml
+++ b/src/main/res/layout/activity_batch.xml
@@ -20,35 +20,35 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/activity_vertical_margin">
+    android:padding="@dimen/margin_default">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/margin_default"
         android:text="@string/batch_question"
         android:textColor="@android:color/white"/>
 
     <Button
         android:background="@android:color/white"
-        android:layout_height="@dimen/abc_action_button_min_height_material"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginBottom="@dimen/margin_default"
         android:layout_width="fill_parent"
         android:onClick="generateMissingPressed"
         android:text="@string/generate_missing"
-        android:textColor="@color/primary"/>
+        android:textColor="@color/primary"
+        android:textSize="@dimen/text_size"/>
 
     <Button
         android:background="@android:color/white"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="@dimen/abc_action_button_min_height_material"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginBottom="@dimen/margin_default"
         android:layout_width="fill_parent"
-        android:text="@string/generate_all"
         android:onClick="generateAllPressed"
-        android:textColor="@color/primary"/>
+        android:text="@string/generate_all"
+        android:textColor="@color/primary"
+        android:textSize="@dimen/text_size"/>
 
     <include layout="@layout/progress_bar"/>
 
@@ -57,9 +57,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="@dimen/margin_small"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white"
-        android:visibility="gone"/>
+        android:textColor="@android:color/white"/>
 
     <LinearLayout
         android:id="@+id/layout_control"
@@ -67,17 +67,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:visibility="gone">
-        <Button
-            android:background="@android:color/white"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="@dimen/abc_action_button_min_height_material"
-            android:layout_weight="1"
-            android:layout_marginEnd="@dimen/margin_small"
-            android:layout_marginRight="@dimen/margin_small"
-            android:layout_width="fill_parent"
-            android:onClick="skipPressed"
-            android:text="@string/skip"
-            android:textColor="@color/primary"/>
 
         <Button
             android:background="@android:color/white"
@@ -85,11 +74,26 @@
             android:layout_height="@dimen/abc_action_button_min_height_material"
             android:layout_weight="1"
             android:layout_width="fill_parent"
-            android:layout_marginLeft="@dimen/margin_small"
-            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginEnd="@dimen/margin_small"
+            android:layout_marginRight="@dimen/margin_small"
             android:onClick="cancelPressed"
             android:text="@android:string/cancel"
-            android:textColor="@color/primary"/>
+            android:textColor="@color/primary"
+            android:textSize="@dimen/text_size"/>
+
+        <Button
+            android:background="@android:color/white"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="@dimen/abc_action_button_min_height_material"
+            android:layout_weight="1"
+            android:layout_marginLeft="@dimen/margin_small"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_width="fill_parent"
+            android:onClick="skipPressed"
+            android:text="@string/skip"
+            android:textColor="@color/primary"
+            android:textSize="@dimen/text_size"/>
+
     </LinearLayout>
 
 </LinearLayout>
