--- a/src/main/res/layout/activity_contact.xml
+++ b/src/main/res/layout/activity_contact.xml
@@ -21,41 +21,46 @@
     android:background="@color/primary">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:id="@+id/image_contact"
+        android:src="@drawable/micopi_logo"
+        android:adjustViewBounds="true"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/iconImageView"
         android:contentDescription="@string/image_description"
-        android:layout_centerHorizontal="true"
-        android:adjustViewBounds="true"/>
+        android:layout_centerHorizontal="true"/>
 
     <include layout="@layout/progress_bar"/>
 
     <TextView
+        android:id="@+id/text_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/image_contact"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="@dimen/margin_default"
+        android:layout_marginLeft="@dimen/margin_default"
+        android:layout_marginRight="@dimen/margin_default"
+        android:layout_marginStart="@dimen/margin_default"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/image_description"
-        android:textColor="@android:color/white"
-        android:id="@+id/descriptionTextView"
-        android:layout_below="@+id/iconImageView"
-        android:layout_alignLeft="@id/iconImageView"
-        android:layout_alignStart="@id/iconImageView"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+        android:textColor="@android:color/white"/>
 
     <TextView
-        android:id="@+id/nameTextView"
+        android:id="@+id/text_contact_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/descriptionTextView"
-        android:layout_alignStart="@id/descriptionTextView"
-        android:layout_below="@+id/descriptionTextView"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/text_description"
+        android:layout_marginEnd="@dimen/margin_default"
+        android:layout_marginLeft="@dimen/margin_default"
+        android:layout_marginRight="@dimen/margin_default"
+        android:layout_marginStart="@dimen/margin_default"
         android:text="@string/no_contact_selected"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/text_size_large"/>
 
 </RelativeLayout>
 
