--- a/src/main/res/layout/activity_batch.xml
+++ b/src/main/res/layout/activity_batch.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/margin_default"
-        android:text="@string/batch_question"
+        android:text="@string/overwrite_all_or_only"
         android:textColor="@android:color/white"/>
 
     <Button
@@ -36,7 +36,7 @@
         android:layout_marginBottom="@dimen/margin_default"
         android:layout_width="fill_parent"
         android:onClick="generateMissingPressed"
-        android:text="@string/generate_missing"
+        android:text="@string/missing_pictures"
         android:textColor="@color/primary"
         android:textSize="@dimen/text_size"/>
 
@@ -46,7 +46,7 @@
         android:layout_marginBottom="@dimen/margin_default"
         android:layout_width="fill_parent"
         android:onClick="generateAllPressed"
-        android:text="@string/generate_all"
+        android:text="@string/all_contacts"
         android:textColor="@color/primary"
         android:textSize="@dimen/text_size"/>
 
@@ -81,18 +81,18 @@
             android:textColor="@color/primary"
             android:textSize="@dimen/text_size"/>
 
-        <Button
-            android:background="@android:color/white"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="@dimen/abc_action_button_min_height_material"
-            android:layout_weight="1"
-            android:layout_marginLeft="@dimen/margin_small"
-            android:layout_marginStart="@dimen/margin_small"
-            android:layout_width="fill_parent"
-            android:onClick="skipPressed"
-            android:text="@string/skip"
-            android:textColor="@color/primary"
-            android:textSize="@dimen/text_size"/>
+        <!--<Button-->
+            <!--android:background="@android:color/white"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_height="@dimen/abc_action_button_min_height_material"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_marginLeft="@dimen/margin_small"-->
+            <!--android:layout_marginStart="@dimen/margin_small"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:onClick="skipPressed"-->
+            <!--android:text="@string/skip"-->
+            <!--android:textColor="@color/primary"-->
+            <!--android:textSize="@dimen/text_size"/>-->
 
     </LinearLayout>
 
