--- a/src/main/res/drawable/progress_drawable.xml
+++ b/src/main/res/drawable/progress_drawable.xml
@@ -3,7 +3,7 @@
     <item android:id="@android:id/background">
         <shape>
             <solid
-                android:color="@color/primary" />
+                android:color="@color/accent" />
         </shape>
     </item>
 
@@ -12,7 +12,7 @@
         <clip>
             <shape>
                 <solid
-                    android:color="@color/accent" />
+                    android:color="@color/primary_dark" />
             </shape>
         </clip>
     </item>
