--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,20 +1,14 @@
-
 <!--Copyright (C) 2014 Easy Target-->
 
-<!--Licensed under the Apache License, Version 2.0 (the "License");-->
-<!--you may not use this file except in compliance with the License.-->
-<!--You may obtain a copy of the License at-->
+<!--Licensed under the Apache License, Version 2.0 (the "License");--><!--you may not use this file except in compliance with the License.--><!--You may obtain a copy of the License at-->
 
-    <!--http://www.apache.org/licenses/LICENSE-2.0.txt-->
+<!--http://www.apache.org/licenses/LICENSE-2.0.txt-->
 
-<!--Unless required by applicable law or agreed to in writing, software-->
-<!--distributed under the License is distributed on an "AS IS" BASIS,-->
-<!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
-<!--See the License for the specific language governing permissions and-->
-<!--limitations under the License.-->
+<!--Unless required by applicable law or agreed to in writing, software--><!--distributed under the License is distributed on an "AS IS" BASIS,--><!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.--><!--See the License for the specific language governing permissions and--><!--limitations under the License.-->
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_contact"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,29 +16,27 @@
 
     <ImageView
         android:id="@+id/image_contact"
-        android:src="@drawable/micopi_logo"
-        android:adjustViewBounds="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/generated_image"
-        android:layout_centerHorizontal="true"/>
-
-    <!--<include layout="@layout/progress_bar"/>-->
+        android:src="@drawable/micopi_logo" />
 
     <TextView
         android:id="@+id/text_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image_contact"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@id/image_contact"
         android:layout_marginEnd="@dimen/margin_default"
         android:layout_marginLeft="@dimen/margin_default"
         android:layout_marginRight="@dimen/margin_default"
         android:layout_marginStart="@dimen/margin_default"
-        android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/generated_image"
-        android:textColor="@android:color/white"/>
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/text_contact_name"
@@ -60,7 +52,85 @@
         android:text="@string/no_contact_selected"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/text_size_large"/>
+        android:textSize="@dimen/text_size_large" />
+
+    <LinearLayout
+        android:id="@+id/group_contact_actions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/margin_small"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/button_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_small"
+            android:clickable="true"
+            android:onClick="onButtonClicked"
+            android:src="@drawable/ic_search_white_36dp"
+            android:tint="@android:color/white"
+            app:backgroundTint="@color/accent"
+
+            app:fabSize="mini" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/button_prev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_small"
+            android:clickable="true"
+            android:onClick="onButtonClicked"
+            android:src="@drawable/ic_arrow_back_white_36dp"
+            android:tint="@android:color/white"
+            app:backgroundTint="@color/accent"
+
+            app:fabSize="mini" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/button_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_small"
+            android:clickable="true"
+            android:onClick="onButtonClicked"
+            android:src="@drawable/ic_arrow_forward_white_36dp"
+            android:tint="@android:color/white"
+            app:backgroundTint="@color/accent"
+
+            app:fabSize="mini" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/button_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_small"
+            android:clickable="true"
+            android:onClick="onButtonClicked"
+            android:src="@drawable/ic_save_white_36dp"
+            android:tint="@android:color/white"
+            app:backgroundTint="@color/accent"
+
+            app:fabSize="mini" />
+
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/button_assign"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/group_contact_actions"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/margin_small"
+        android:clickable="true"
+        android:onClick="onButtonClicked"
+        android:src="@drawable/ic_done_white_36dp"
+        android:tint="@android:color/white"
+        app:backgroundTint="@color/accent"
+
+        tools:ignore="RtlHardcoded" />
 
 </RelativeLayout>
 
