--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -9,67 +9,98 @@
 <!--Unless required by applicable law or agreed to in writing, software--><!--distributed under the License is distributed on an "AS IS" BASIS,--><!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.--><!--See the License for the specific language governing permissions and--><!--limitations under the License.-->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    android:padding="@dimen/margin_default">
+    android:padding="@dimen/margin_small">
 
-    <ImageView
-        android:id="@+id/image_logo"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/button_pick"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/micopi_logo" />
-
-    <Button
-        android:id="@+id/button_pick"
+    <LinearLayout
+        android:id="@+id/group_welcome_buttons"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/margin_small"
-        android:background="@android:color/white"
-        android:onClick="selectButtonPressed"
-        android:text="@string/pick_contact"
-        android:textColor="@color/primary"
-        android:textSize="@dimen/text_size" />
-
-    <TextView
-        android:id="@+id/text_intro"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button_pick"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:text="@string/picture_will_be_previewed"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/text_size" />
+        android:layout_alignParentTop="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button_automatic_mode"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height"
-        android:layout_below="@+id/text_intro"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:background="@android:color/white"
-        android:onClick="crawlButtonPressed"
-        android:text="@string/auto_mode"
-        android:textColor="@color/primary"
-        android:textSize="@dimen/text_size" />
+        <!-- Contact Picker Button: -->
 
-    <Button
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginBottom="@dimen/margin_small"
+            android:onClick="selectButtonPressed"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardElevation="2dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:gravity="center"
+                android:text="@string/pick_contact"
+                android:textAllCaps="true"
+                android:textColor="@color/primary"
+                android:textSize="@dimen/text_size" />
+
+        </android.support.v7.widget.CardView>
+
+        <!-- Description Text: -->
+
+        <TextView
+            android:id="@+id/text_intro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_default"
+            android:text="@string/picture_will_be_previewed"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/text_size" />
+
+        <!-- Batch Mode Button: -->
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginBottom="@dimen/margin_small"
+            android:onClick="crawlButtonPressed"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardElevation="2dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:gravity="center"
+                android:text="@string/auto_mode"
+                android:textAllCaps="true"
+                android:textColor="@color/primary"
+                android:textSize="@dimen/text_size" />
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+    <!-- Donate Button: -->
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
         android:layout_alignParentBottom="true"
-        android:background="@color/primary_dark"
         android:onClick="donateButtonPressed"
-        android:text="@string/donate"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/text_size" />
+        app:cardBackgroundColor="@color/primary_dark"
+        app:cardElevation="2dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/selectableItemBackground"
+            android:gravity="center"
+            android:text="@string/donate"
+            android:textAllCaps="true"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/text_size" />
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
