Various UI improvements

--- a/app/src/main/res/layout-land/activity_contact.xml
+++ b/app/src/main/res/layout-land/activity_contact.xml
@@ -133,5 +133,7 @@
         app:backgroundTint="@color/accent"
         tools:ignore="RtlHardcoded" />
 
+    <include layout="@layout/include_back_button" />
+
 </RelativeLayout>
 
