--- a/app/src/main/res/layout/activity_batch.xml
+++ b/app/src/main/res/layout/activity_batch.xml
@@ -2,90 +2,95 @@
 
 <!--Copyright (C) 2015 Easy Target-->
 
-<!--Licensed under the Apache License, Version 2.0 (the "License");-->
-<!--you may not use this file except in compliance with the License.-->
-<!--You may obtain a copy of the License at-->
+<!--Licensed under the Apache License, Version 2.0 (the "License");--><!--you may not use this file except in compliance with the License.--><!--You may obtain a copy of the License at-->
 
 <!--http://www.apache.org/licenses/LICENSE-2.0.txt-->
 
-<!--Unless required by applicable law or agreed to in writing, software-->
-<!--distributed under the License is distributed on an "AS IS" BASIS,-->
-<!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
-<!--See the License for the specific language governing permissions and-->
-<!--limitations under the License.-->
+<!--Unless required by applicable law or agreed to in writing, software--><!--distributed under the License is distributed on an "AS IS" BASIS,--><!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.--><!--See the License for the specific language governing permissions and--><!--limitations under the License.-->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/primary"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/margin_default">
+    android:layout_height="match_parent"
+    android:background="@color/primary">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:text="@string/overwrite_all_or_only"
-        android:textColor="@android:color/white"/>
-
-    <Button
-        android:background="@android:color/white"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:layout_width="fill_parent"
-        android:onClick="generateMissingPressed"
-        android:text="@string/missing_pictures"
-        android:textColor="@color/primary"
-        android:textSize="@dimen/text_size"/>
-
-    <Button
-        android:background="@android:color/white"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:layout_width="fill_parent"
-        android:onClick="generateAllPressed"
-        android:text="@string/all_contacts"
-        android:textColor="@color/primary"
-        android:textSize="@dimen/text_size"/>
-
-    <ProgressBar
-        android:id="@+id/progress_batch"
-        android:indeterminate="false"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/text_contact_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/margin_small"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white"/>
+    <include
+        android:id="@+id/image_back_batch"
+        layout="@layout/include_back_button" />
 
     <LinearLayout
-        android:id="@+id/layout_control"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:visibility="gone">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/image_back_batch"
+        android:orientation="vertical"
+        android:padding="@dimen/margin_default">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/margin_default"
+            android:text="@string/overwrite_all_or_only"
+            android:textColor="@android:color/white" />
 
         <Button
-            android:background="@android:color/white"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="@dimen/abc_action_button_min_height_material"
-            android:layout_weight="1"
             android:layout_width="fill_parent"
-            android:layout_marginEnd="@dimen/margin_small"
-            android:layout_marginRight="@dimen/margin_small"
-            android:onClick="cancelPressed"
-            android:text="@android:string/cancel"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginBottom="@dimen/margin_default"
+            android:background="@android:color/white"
+            android:onClick="generateMissingPressed"
+            android:text="@string/missing_pictures"
             android:textColor="@color/primary"
-            android:textSize="@dimen/text_size"/>
+            android:textSize="@dimen/text_size" />
 
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginBottom="@dimen/margin_default"
+            android:background="@android:color/white"
+            android:onClick="generateAllPressed"
+            android:text="@string/all_contacts"
+            android:textColor="@color/primary"
+            android:textSize="@dimen/text_size" />
+
+        <ProgressBar
+            android:id="@+id/progress_batch"
+            android:layout_width="wrap_content"
+            android:visibility="invisible"
+            android:indeterminateTint="@android:color/white"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/text_contact_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/margin_small"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@android:color/white" />
+
+        <LinearLayout
+            android:id="@+id/layout_control"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/abc_action_button_min_height_material"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginEnd="@dimen/margin_small"
+                android:layout_marginRight="@dimen/margin_small"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:onClick="cancelPressed"
+                android:text="@android:string/cancel"
+                android:textColor="@color/primary"
+                android:textSize="@dimen/text_size" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
