--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -26,8 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_default"
         android:gravity="center"
+        android:paddingTop="@dimen/back_button_top_margin"
         android:text="micopi"
         android:textColor="@android:color/white"
         android:textSize="44sp"
