--- a/app/src/main/res/layout/include_back_button.xml
+++ b/app/src/main/res/layout/include_back_button.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="36dp"
+    android:layout_height="36dp"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
-    android:layout_margin="4dp"
+    android:layout_marginTop="@dimen/back_button_top_margin"
     android:background="?attr/selectableItemBackground"
     android:onClick="onBackButtonClicked"
     android:src="@drawable/ic_action_hardware_keyboard_arrow_left"
