--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,8 @@
 <!--limitations under the License.-->
 
 <resources>
+    <dimen name="back_button_top_margin">0dp</dimen>
+
     <dimen name="button_height">48dp</dimen>
     <dimen name="margin_default">16dp</dimen>
     <dimen name="margin_small">8dp</dimen>
