--- a/app/src/main/res/layout/activity_batch.xml
+++ b/app/src/main/res/layout/activity_batch.xml
@@ -58,7 +58,7 @@
         <ProgressBar
             android:id="@+id/progress_batch"
             android:layout_width="wrap_content"
-            android:visibility="visible"
+            android:visibility="invisible"
             android:indeterminateTint="@android:color/white"
             android:layout_height="wrap_content" />
 
