--- a/app/src/main/res/values-large/dimens.xml
+++ b/app/src/main/res/values-large/dimens.xml
@@ -17,5 +17,6 @@
 <resources>
     <dimen name="margin_default">48dp</dimen>
     <dimen name="text_size">20sp</dimen>
+    <dimen name="text_size_mid_large">24sp</dimen>
     <dimen name="text_size_large">32sp</dimen>
 </resources>
